--- a/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 迭代器 & 生成器\n"
+    "# 迭代器 & 可迭代对象 & 生成器\n"
    ]
   },
   {
@@ -15,12 +15,14 @@
     "\n",
     "迭代器（Iterator）是一种对象，它允许按照一定顺序逐个访问集合或序列中的元素，而不需要事先知道整个集合的内容。迭代器提供了一种惰性计算（lazy evaluation）的方式，只在需要时生成或提供下一个元素。\n",
     "\n",
-    "迭代器既可以通过循环遍历，也可以通过 `next` 方法逐个访问元素。\n"
+    "迭代器既可以通过循环遍历，也可以通过 `next` 方法逐个访问元素。\n",
+    "\n",
+    "`iter` 方法可以生成一个可迭代对象的迭代器。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -37,16 +39,14 @@
    ],
    "source": [
     "try:\n",
-    "    list = [1, 2, 3, 4]\n",
+    "    # 生成一个列表的迭代器\n",
+    "    it = iter([1, 2, 3, 4])\n",
     "\n",
-    "    # 生成列表迭代器\n",
-    "    it = iter(list)\n",
-    "\n",
-    "    # 通过 for 循环遍历迭代器\n",
+    "    # 循环遍历迭代器\n",
     "    for item in it:\n",
     "        print(item)\n",
     "\n",
-    "    # 通过 next 方法获取迭代器元素，由于 for 循环已经将迭代器迭代完，所以此时没有元素可迭代，会引发 StopIteration 异常\n",
+    "    # 通过 next 方法获取迭代器元素，由于循环已经将迭代器迭代完，所以此时没有元素可迭代，会引发 StopIteration 异常\n",
     "    next(it)\n",
     "except StopIteration:\n",
     "    print(\"迭代器遍历完成\")"
@@ -56,16 +56,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 自定义迭代器\n",
+    "### 自定义迭代器\n",
     "\n",
-    "迭代器类需要实现两个方法 `__iter__` 与 `__next__`，`__iter__` 返回迭代器对象本身，`__next__` 返回迭代器中的下一个元素，当迭代器中没有元素可供返回时，`__next__` 应引发 `StopIteration` 异常，以指示迭代的结束。\n",
+    "迭代器类需要实现两个方法 `__iter__` 与 `__next__`，`__iter__` 返回迭代器对象本身，`__next__` 返回迭代器中的下一个元素，当迭代器中没有元素可供返回时，`__next__` 应引发 `StopIteration` 异常，指示迭代的结束。\n",
     "\n",
     "当使用循环遍历迭代器时，循环会自动调用 `__next__` 方法来获取下一个元素，直到迭代结束。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -99,10 +99,7 @@
     "\n",
     "\n",
     "try:\n",
-    "    list = [1, 2, 3, 4]\n",
-    "\n",
-    "    # 生成列表迭代器\n",
-    "    it = MyIterator(list)\n",
+    "    it = MyIterator([1, 2, 3, 4])\n",
     "\n",
     "    for item in it:\n",
     "        print(item)\n",
@@ -124,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +161,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "字典（Dictionary）：字典（dict）对象也是可迭代的。在迭代字典时，默认情况下会按照键（key）的顺序逐个返回键值对（key-value pair）。\n",
+    "\n",
+    "文件对象（File Object）：打开的文件对象也是可迭代的。在迭代文件对象时，会逐行返回文件的内容。\n",
+    "\n",
+    "生成器（Generator）\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -174,21 +182,26 @@
        "<slot wrapper '__iter__' of 'bytes' objects>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 可迭代对象\n",
+    "# 一些可迭代对象\n",
     "\n",
-    "str.__iter__  # 字符串\n",
-    "tuple.__iter__  # 元组\n",
-    "list.__iter__  # 列表\n",
+    "\n",
     "set.__iter__  # 集合\n",
+    "frozenset.__iter__  # 冻结集合\n",
+    "\n",
     "dict.__iter__  # 字典\n",
     "bytearray.__iter__  # 字节数组\n",
-    "bytes.__iter__  # 字节串"
+    "bytes.__iter__  # 字节串\n",
+    "\n",
+    "# 序列\n",
+    "str.__iter__  # 字符串\n",
+    "tuple.__iter__  # 元组\n",
+    "list.__iter__  # 列表"
    ]
   },
   {
@@ -204,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
