--- a/src/python3_course_for_devs/notebooks/class.ipynb
+++ b/src/python3_course_for_devs/notebooks/class.ipynb
@@ -8,17 +8,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 定义\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 765,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MyClass:\n",
-    "    class_attribute: str = \"类属性\"\n",
+    "    public_attribute: str = \"类公共属性\"\n",
+    "    __private_attribute = \"类私有属性\"\n",
     "\n",
-    "    # 对象初始化操作\n",
+    "    # 实例初始化\n",
     "    def __init__(self, instance_attribute):\n",
+    "        # self 表示类的实例对象自身，用于在实例方法中访问和操作实例的属性和方法\n",
+    "        # 给实例对象添加一个属性 instance_attribute\n",
     "        self.instance_attribute = instance_attribute\n",
+    "\n",
+    "    # 公共方法\n",
+    "    # 可以在类的内部、子类和类的外部直接访问和调用\n",
+    "    def public_method(self):\n",
+    "        print(\"公共方法\")\n",
+    "\n",
+    "    # 受保护方法\n",
+    "    # 可以在类的内部、子类和类的外部进行访问。虽然约定上视为受保护，但并没有强制限制访问\n",
+    "    def _protected_method(self):\n",
+    "        print(\"受保护方法\")\n",
+    "        # 在类内部调用私有方法\n",
+    "        self.__private_method()\n",
+    "\n",
+    "    # 私有方法\n",
+    "    # 仅在类的内部可访问，无法通过类的外部直接访问\n",
+    "    def __private_method(self):\n",
+    "        print(\"私有方法\", self.__private_attribute)\n",
+    "\n",
+    "    # 类方法\n",
+    "    # 接收一个参数表示类对象（而非类实例对象），来操作类属性\n",
+    "    @classmethod\n",
+    "    def class_method(cls):\n",
+    "        print(\"类方法可以操作\", cls.public_attribute)\n",
+    "\n",
+    "    # 静态方法\n",
+    "    # 无法直接访问类属性，因为静态方法并不接收类对象参数\n",
+    "    @staticmethod\n",
+    "    def static_method():\n",
+    "        print(\"静态方法\")\n",
     "\n",
     "    # __str__\n",
     "    # 定义对象的字符串表示形式\n",
@@ -27,13 +66,9 @@
     "    def __str__(self):\n",
     "        return f\"字符串表示: {self.instance_attribute}\"\n",
     "\n",
-    "    def __format__(self):\n",
-    "        return f\"format: {self.instance_attribute}\"\n",
-    "\n",
     "    # __repr__\n",
     "    # 当使用方法 repr 或在交互式环境中直接输入对象名并执行时，对象的 __repr__ 方法会被自动调用\n",
     "    # 如果没有定义 __repr__，会尝试调用 __str__\n",
-    "\n",
     "    def __repr__(self):\n",
     "        return f\"official 字符串表示({self.instance_attribute})\"\n",
     "\n",
@@ -42,98 +77,66 @@
     "    # 当两个 MyClass 对象相加时，把两对象属性拼接后重新生成新对象\n",
     "    def __add__(self, other):\n",
     "        if isinstance(other, MyClass):\n",
-    "            return MyClass(self.instance_attribute + other.instance_attribute)\n",
+    "            return MyClass(f\"{self.instance_attribute}{other.instance_attribute}\")\n",
     "        else:\n",
-    "            raise TypeError(\"Unsupported operand type.\")\n",
-    "\n",
-    "    # 类方法\n",
-    "    # 必须接收一个额外的参数，表示类的实例\n",
-    "    # 当子类继承父类时，类方法会继承并操作子类的类属性\n",
-    "    @classmethod\n",
-    "    def class_method(self):\n",
-    "        print(\"类方法可以操作\", self.class_attribute)\n",
-    "\n",
-    "    # 静态方法\n",
-    "    # 无法直接访问类属性，因为静态方法并不接收类实例参数。\n",
-    "    # 静态方法在子类中行为与父类相同，不会动态绑定到子类。\n",
-    "    @staticmethod\n",
-    "    def static_method():\n",
-    "        print(\"静态方法\")\n",
-    "\n",
-    "    # 公共方法\n",
-    "    # 公共方法可以在类的内部、子类和类的外部直接访问和调用\n",
-    "    def public_method(self):\n",
-    "        print(\"公共方法\")\n",
-    "\n",
-    "    # 受保护方法\n",
-    "    # 以单个下划线 _ 开头命名\n",
-    "    # 受保护方法可以在类的内部、子类和类的外部进行访问。虽然约定上视为受保护，但并没有强制限制访问\n",
-    "    def _protected_method(self):\n",
-    "        print(\"受保护方法\")\n",
-    "        # 在类内部调用私有方法\n",
-    "        self.__private_method()\n",
-    "\n",
-    "    # 私有方法\n",
-    "    # 以双下划线 __ 开头命名\n",
-    "    # 私有方法仅在类的内部可访问，无法通过类的外部直接访问\n",
-    "    def __private_method(self):\n",
-    "        print(\"私有方法\")"
+    "            raise TypeError(\"Unsupported operand type.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 766,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "字符串表示: 属性1\n",
-      "类属性\n"
+      "字符串表示: 实例属性 1\n",
+      "类公共属性\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "official 字符串表示(属性1)"
+       "official 字符串表示(实例属性 1)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 766,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj1 = MyClass(\"属性1\")\n",
-    "obj2 = MyClass(\"属性2\")\n",
+    "obj1 = MyClass(\"实例属性 1\")\n",
+    "obj2 = MyClass(\"实例属性 2\")\n",
     "\n",
-    "print(obj1)\n",
-    "print(obj1.class_attribute)\n",
-    "obj1"
+    "print(obj1)  # 字符串表示\n",
+    "print(obj1.public_attribute)  # 访问类属性\n",
+    "obj1  # official 字符串表示"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 767,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "字符串表示: 属性1属性2\n"
+      "字符串表示: 实例属性 1实例属性 2\n"
      ]
     }
    ],
    "source": [
+    "# 自定义加法\n",
     "obj3 = obj1 + obj2\n",
     "print(obj3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [
     {
@@ -142,25 +145,26 @@
      "text": [
       "公共方法\n",
       "受保护方法\n",
-      "私有方法\n"
+      "私有方法 类私有属性\n"
      ]
     }
    ],
    "source": [
+    "# 对象方法访问\n",
     "obj1.public_method()\n",
     "obj1._protected_method()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 769,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "类方法可以操作 类属性\n",
+      "类方法可以操作 类公共属性\n",
       "静态方法\n"
      ]
     }
@@ -174,88 +178,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 魔术方法\n",
+    "## 继承\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 770,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClassChild(MyClass):\n",
+    "    public_attribute: str = \"公共子类属性\"\n",
     "\n",
-    "Python 中的魔术方法（Magic Methods）是一组特殊的方法，它们以双下划线（\\_\\_）开头和结尾。这些方法可以在类中定义，用于实现对象的特定行为和操作。下面是一些常用的魔术方法及其功能：\n",
+    "    def __init__(self, instance_attribute):\n",
+    "        # super 调用父类(超类)\n",
+    "        super().__init__(instance_attribute)\n",
     "\n",
-    "1. `__init__(self, ...)`: 初始化方法，用于创建对象并进行初始化操作。\n",
+    "    # 函数重载\n",
+    "    def public_method(self):\n",
+    "        print(\"公共方法重载\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 771,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "公共子类属性\n",
+      "子实例属性\n",
+      "类方法可以操作 公共子类属性\n",
+      "公共方法重载\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj_clild = MyClassChild(\"子实例属性\")\n",
     "\n",
-    "2. `__str__(self)`: 返回对象的字符串表示，通常在使用 `print(obj)` 或 `str(obj)` 时调用。\n",
+    "print(obj_clild.public_attribute)\n",
+    "print(obj_clild.instance_attribute)\n",
     "\n",
-    "3. `__repr__(self)`: 返回对象的可打印字符串表示，通常在使用 `repr(obj)` 时调用。\n",
-    "\n",
-    "4. `__len__(self)`: 返回对象的长度，通常在使用 `len(obj)` 时调用。\n",
-    "\n",
-    "5. `__getitem__(self, key)`: 定义对象的索引操作，使得对象可以像序列（如列表或字符串）一样通过索引访问元素。\n",
-    "\n",
-    "6. `__setitem__(self, key, value)`: 定义对象的索引赋值操作，使得对象可以像序列一样通过索引设置元素的值。\n",
-    "\n",
-    "7. `__delitem__(self, key)`: 定义对象的索引删除操作，使得对象可以像序列一样通过索引删除元素。\n",
-    "\n",
-    "8. `__call__(self, ...)`: 允许将对象当作函数调用，调用对象时会执行该方法。\n",
-    "\n",
-    "9. `__add__(self, other)`: 定义对象的加法操作，使得对象可以使用 `+` 运算符进行相加。\n",
-    "\n",
-    "10. `__sub__(self, other)`: 定义对象的减法操作，使得对象可以使用 `-` 运算符进行相减。\n",
-    "\n",
-    "11. `__eq__(self, other)`: 定义对象的相等比较操作，使得对象可以使用 `==` 运算符进行比较。\n",
-    "\n",
-    "12. `__lt__(self, other)`: 定义对象的小于比较操作，使得对象可以使用 `<` 运算符进行比较。\n"
+    "obj_clild.class_method()\n",
+    "obj_clild.public_method()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "下面是一份包含大部分常用魔术方法的列表，供你参考：\n",
+    "## 多继承\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 772,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass2:\n",
+    "    def __init__(self, b) -> None:\n",
+    "        self.b = b\n",
     "\n",
-    "- 对象创建和销毁相关：\n",
+    "    def public_method(self):\n",
+    "        print(\"公共方法 MyClass2\")\n",
     "\n",
-    "  - `__new__(cls, ...)`: 创建对象时调用的方法，用于创建并返回实例。\n",
-    "  - `__init__(self, ...)`: 初始化方法，用于对实例进行初始化操作。\n",
-    "  - `__del__(self)`: 对象销毁时调用的方法，用于执行清理操作。\n",
+    "    def a(self):\n",
+    "        print(self.b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 773,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<class '__main__.MyClassChild2'>, <class '__main__.MyClass'>, <class '__main__.MyClass2'>, <class 'object'>]\n",
+      "公共方法\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClassChild2(MyClass, MyClass2):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(instance_attribute=\"22\")\n",
+    "        MyClass2.__init__(self, b=\"22\")\n",
     "\n",
-    "- 对象表示相关：\n",
     "\n",
-    "  - `__str__(self)`: 返回对象的字符串表示，通常在使用 `print(obj)` 或 `str(obj)` 时调用。\n",
-    "  - `__repr__(self)`: 返回对象的可打印字符串表示，通常在使用 `repr(obj)` 时调用。\n",
-    "  - `__format__(self, format_spec)`: 控制对象的格式化输出。\n",
+    "print(MyClassChild2.mro())\n",
     "\n",
-    "- 属性访问相关：\n",
-    "\n",
-    "  - `__getattr__(self, name)`: 访问不存在属性时调用的方法。\n",
-    "  - `__getattribute__(self, name)`: 访问对象属性时调用的方法，比 `__getattr__` 更早调用。\n",
-    "  - `__setattr__(self, name, value)`: 对象属性赋值时调用的方法。\n",
-    "  - `__delattr__(self, name)`: 删除对象属性时调用的方法。\n",
-    "\n",
-    "- 容器类型相关：\n",
-    "\n",
-    "  - `__len__(self)`: 返回对象的长度，通常在使用 `len(obj)` 时调用。\n",
-    "  - `__getitem__(self, key)`: 对象通过索引访问元素时调用的方法。\n",
-    "  - `__setitem__(self, key, value)`: 对象通过索引设置元素值时调用的方法。\n",
-    "  - `__delitem__(self, key)`: 对象通过索引删除元素时调用的方法。\n",
-    "  - `__iter__(self)`: 返回一个迭代器对象，用于支持对象的迭代。\n",
-    "  - `__next__(self)`: 返回迭代器的下一个元素。\n",
-    "  - `__contains__(self, item)`: 判断对象是否包含指定元素，通常在使用 `in` 运算符时调用。\n",
-    "\n",
-    "- 比较和排序相关：\n",
-    "\n",
-    "  - `__eq__(self, other)`: 定义对象的相等比较操作，使得对象可以使用 `==` 运算符进行比较。\n",
-    "  - `__ne__(self, other)`: 定义对象的不等比较操作，使得对象可以使用 `!=` 运算符进行比较。\n",
-    "  - `__lt__(self, other)`: 定义对象的小于比较操作，使得对象可以使用 `<` 运算符进行比较。\n",
-    "  - `__gt__(self, other)`: 定义对象的大于比较操作，使得对象可以使用 `>` 运算符进行比较。\n",
-    "  - `__le__(self, other)`: 定义对象的小于等于比较操作，使得对象可以使用 `<=` 运算符进行比较。\n",
-    "  - `__ge__(self, other)`: 定义对象的大于等于比较操作，使得对象可以使用 `>=` 运算符进行比较。\n",
-    "  - `__hash__(self)`: 返回对象的哈希值。\n",
-    "\n",
-    "- 调用相关：\n",
-    "\n",
-    "  - `__call__(self, ...)`: 将对象当作函数进行调用时调用的方法。\n",
-    "\n",
-    "- 上下文管理相关：\n",
-    "  - `__enter__(self)`, `__exit__(self, exc_type, exc_value, traceback)`: 定义对象在上下文管理器中的行为，允许使用 `with` 语句管理资源。\n",
-    "\n",
-    "这只是一份包含大部分常用魔术方法的列表，实际上还有更多的魔术方法可以了解和使用。你可以根据你的类的需求选择适合的魔术方法来实现自定义的行为和操作。\n"
+    "obj_child2 = MyClassChild2()\n",
+    "obj_child2.public_method()\n",
+    "obj_child2.a()"
    ]
   }
  ],
