--- a/src/python3_course_for_devs/notebooks/class.ipynb
+++ b/src/python3_course_for_devs/notebooks/class.ipynb
@@ -11,12 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 定义\n"
+    "## 定义\n",
+    "\n",
+    "`self` 表示类的实例对象，在实例方法中用于访问和操作实例的属性和方法。\n",
+    "\n",
+    "`cls` 表示类对象，在类方法中用于操作类属性和调用类方法。\n",
+    "\n",
+    "`__str__` 这种以双下划线开头和结尾的函数叫做[魔术方法]('./magic_method.ipynb')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +32,6 @@
     "\n",
     "    # 实例初始化\n",
     "    def __init__(self, instance_attribute):\n",
-    "        # self 表示类的实例对象自身，用于在实例方法中访问和操作实例的属性和方法\n",
     "        # 给实例对象添加一个属性 instance_attribute\n",
     "        self.instance_attribute = instance_attribute\n",
     "\n",
@@ -48,7 +53,6 @@
     "        print(\"私有方法\", self.__private_attribute)\n",
     "\n",
     "    # 类方法\n",
-    "    # 接收一个参数表示类对象（而非类实例对象），来操作类属性\n",
     "    @classmethod\n",
     "    def class_method(cls):\n",
     "        print(\"类方法可以操作\", cls.public_attribute)\n",
@@ -64,13 +68,13 @@
     "    # 当使用方法 str、print 或使用 f-string 格式化时，对象的 __str__ 方法会被自动调用\n",
     "    # 如果没有定义 __str__，会尝试调用 __repr__\n",
     "    def __str__(self):\n",
-    "        return f\"字符串表示: {self.instance_attribute}\"\n",
+    "        return f\"MyClass(instance_attribute='{self.instance_attribute}')\"\n",
     "\n",
     "    # __repr__\n",
     "    # 当使用方法 repr 或在交互式环境中直接输入对象名并执行时，对象的 __repr__ 方法会被自动调用\n",
     "    # 如果没有定义 __repr__，会尝试调用 __str__\n",
     "    def __repr__(self):\n",
-    "        return f\"official 字符串表示({self.instance_attribute})\"\n",
+    "        return f\"MyClass('{self.instance_attribute}')\"\n",
     "\n",
     "    # __add__\n",
     "    # 定义对象的加法操作\n",
@@ -84,24 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "字符串表示: 实例属性 1\n",
+      "MyClass(instance_attribute='实例属性 1')\n",
       "类公共属性\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "official 字符串表示(实例属性 1)"
+       "MyClass('实例属性 1')"
       ]
      },
-     "execution_count": 766,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,19 +116,20 @@
     "\n",
     "print(obj1)  # 字符串表示\n",
     "print(obj1.public_attribute)  # 访问类属性\n",
-    "obj1  # official 字符串表示"
+    "\n",
+    "eval(repr(obj1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "字符串表示: 实例属性 1实例属性 2\n"
+      "MyClass(instance_attribute='实例属性 1实例属性 2')\n"
      ]
     }
    ],
@@ -136,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,14 +199,14 @@
     "        # super 调用父类(超类)\n",
     "        super().__init__(instance_attribute)\n",
     "\n",
-    "    # 函数重载\n",
+    "    # 公共方法重写\n",
     "    def public_method(self):\n",
-    "        print(\"公共方法重载\")"
+    "        print(\"公共方法重写\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +216,7 @@
       "公共子类属性\n",
       "子实例属性\n",
       "类方法可以操作 公共子类属性\n",
-      "公共方法重载\n"
+      "公共方法重写\n"
      ]
     }
    ],
@@ -234,24 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MyClass2:\n",
-    "    def __init__(self, b) -> None:\n",
-    "        self.b = b\n",
+    "    def __init__(self, instance_attribute) -> None:\n",
+    "        self.instance_attribute = instance_attribute\n",
     "\n",
     "    def public_method(self):\n",
-    "        print(\"公共方法 MyClass2\")\n",
-    "\n",
-    "    def a(self):\n",
-    "        print(self.b)"
+    "        print(\"公共方法 MyClass2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -259,23 +261,22 @@
      "output_type": "stream",
      "text": [
       "[<class '__main__.MyClassChild2'>, <class '__main__.MyClass'>, <class '__main__.MyClass2'>, <class 'object'>]\n",
-      "公共方法\n",
-      "22\n"
+      "公共方法\n"
      ]
     }
    ],
    "source": [
     "class MyClassChild2(MyClass, MyClass2):\n",
     "    def __init__(self):\n",
-    "        super().__init__(instance_attribute=\"22\")\n",
-    "        MyClass2.__init__(self, b=\"22\")\n",
+    "        super().__init__(instance_attribute=\"父类1\")\n",
+    "        MyClass2.__init__(self, instance_attribute=\"父类2\")\n",
     "\n",
     "\n",
+    "# 子类的继承顺序\n",
     "print(MyClassChild2.mro())\n",
     "\n",
     "obj_child2 = MyClassChild2()\n",
-    "obj_child2.public_method()\n",
-    "obj_child2.a()"
+    "obj_child2.public_method()"
    ]
   }
  ],
