--- a/src/python3_course_for_devs/notebooks/magic_method.ipynb
+++ b/src/python3_course_for_devs/notebooks/magic_method.ipynb
@@ -1,20 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 魔术方法\n",
+    "\n",
+    "魔术方法（Magic Methods）是一组特殊的方法，它们以双下划线（`__`）开头和结尾。这些方法可以在类中定义，用于实现对象的特定行为和操作。\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 魔术方法\n",
-    "\n",
-    "Python 中的魔术方法（Magic Methods）是一组特殊的方法，它们以双下划线（`__`）开头和结尾。这些方法可以在类中定义，用于实现对象的特定行为和操作。下面是一些常用的魔术方法及其功能：\n",
-    "\n",
+    "## 一些常用的魔术方法及功能\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- 对象创建和销毁相关：\n",
     "\n",
     "  - `__new__(cls, ...)`: 创建对象时调用的方法，用于创建并返回实例。\n",
