--- a/src/python3_course_for_devs/notebooks/dict.ipynb
+++ b/src/python3_course_for_devs/notebooks/dict.ipynb
@@ -6,16 +6,11 @@
    "source": [
     "# 字典\n",
     "\n",
-    "字典是`可变类型`但非`序列类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "字典是`可变类型`但非`序列类型`（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
     "\n",
-    "字典的键必须是不可变的，所以字符串、数字、元组都可以作为字典的 key\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 字典基本操作\n"
+    "字典的键必须是不可变的对象，这是因为字典使用键来进行哈希（hashing）和快速查找。不可变对象的哈希值在创建后不会发生改变，因此可以保证字典中键的唯一性和可靠性。\n",
+    "\n",
+    "字典的值，可以是任何对象，包括标准对象和用户自定义对象。并且同一个字典中可以有多个键对应相同的值。但是，字典的键必须是唯一的，如果同一个键被赋值多次，后面的值会覆盖前面的值。\n"
    ]
   },
   {
@@ -27,66 +22,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{1: None, '4': None}"
+       "{1: '统一的默认值', '4': '统一的默认值'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 通过字面值方式\n",
-    "{\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}\n",
+    "d = {\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}\n",
     "\n",
-    "# 使用内置方法创建，参数接收列表、元组、集合\n",
-    "dict.fromkeys({1, \"4\"})"
+    "# 空字典\n",
+    "{}\n",
+    "\n",
+    "# 参数 keys 是一个可迭代的对象，用于指定新字典的键；value 是可选参数，表示新字典中所有键对应的统一值，默认为 None\n",
+    "dict.fromkeys({1, \"4\"}, \"统一的默认值\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 值访问\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'foo': 5, ('bar', 8): 'tt', 'new': 'new'}"
+       "5"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d1[\"foo\"]  # 读字典的一个属性值\n",
+    "d[\"foo\"]\n",
     "\n",
-    "d1[(\"bar\", 8)] = \"tt\"  # 值更新\n",
-    "\n",
-    "d1[\"new\"] = \"new\"  # 新增\n",
-    "\n",
-    "del d1[2]  # 删除\n",
-    "\n",
-    "d1"
+    "d.get(\"foo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 添加值\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d[\"new\"] = \"new\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 值更新\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'foo': 5, 2: 28, ('bar', 8): 'tt', 'new': 'new'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[(\"bar\", 8)] = \"tt\"\n",
+    "\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 值删除\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del d[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 清空\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -104,23 +173,8 @@
     "d2 = {\"a\": 1, \"a\": 2}\n",
     "print(d2)\n",
     "\n",
-    "# 注意 布尔型和数字类型的关系\n",
     "d3 = {True: 1, 1: 2}\n",
     "print(d3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 字典创建\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 字典内置方法/标准库操作\n"
    ]
   },
   {
@@ -134,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{True: 2}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,27 +208,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{'foo': 5, ('bar', 8): 'tt', 'new': 'new'}\""
+       "'{}'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(d1)"
+    "str(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +237,7 @@
        "{1: None, 's': None, ('t', 3): None}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,17 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 值获取\n",
-    "d2.get(\"a1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +257,7 @@
        "[('a', 2)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +278,7 @@
        "['a']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +299,7 @@
        "[2]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,48 +311,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'foo': 5, ('bar', 8): 'tt', 'new': 'new', 'a': 2}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'foo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/dict.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/dict.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m d\u001b[39m.\u001b[39;49mpop(\u001b[39m\"\u001b[39;49m\u001b[39mfoo\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'foo'"
+     ]
     }
    ],
    "source": [
-    "d1.update(d2)\n",
-    "d1"
+    "d.pop(\"foo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d1.pop(\"foo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -323,18 +347,7 @@
     }
    ],
    "source": [
-    "d1.popitem()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 清空\n",
-    "d3.clear()\n",
-    "d3"
+    "d.popitem()"
    ]
   }
  ],
